# LumaireJ-tests

./: .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  README.md  conftest.py  pyproject.toml
.claude/commands/: _project-board.md  check.md  commit.md  complete-issue.md  done.md  fix.md  issue.md  new-issue.md  pr.md  review-pr.md  ship.md  start-work.md  start.md
.github/: SECURITY.md  WORKFLOW_NOTES.md  pull_request_template.md
.github/actions/start-sut/: action.yml
.github/workflows/: ci.yml
tests/api/: test_journal.py
tests/api/clients/: api_client.py
tests/api/schemas/: journal_schema.py
tests/api/tests/: test_journal_api.py
tests/e2e/: conftest.py  test_journaling_ui.py
tests/e2e/pages/: journal_page.py
tests/e2e/tests/: test_journaling_ui.py
tests/shared/: constants.py  fixtures.py  test_data.py
