[project]
name = "LumaireJ-Tests"
version = "0.1.0"
description = "API & E2E tests for LumaireJ"
authors = [{ name = "Darie Ro", email = "glicerinn@gmail.com" }]
requires-python = "==3.14.*"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest -sv"
test-allure = "pytest -sv --alluredir=allure-results"
test-cov = "pytest -sv --alluredir=allure-results --cov=tests --cov-report=xml"
test-e2e = "pytest -sv -m e2e --reruns=2 --reruns-delay=1"
report = "allure generate allure-results --clean -o allure-report"
open_report = "allure open allure-report"
lint = "ruff check tests/ conftest.py"
fix = "ruff check tests/ conftest.py --fix"
format = "ruff format tests/ conftest.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-sv --alluredir=allure-results"
markers = [
    "smoke: smoke tests",
    "regression: regression tests",
    "api: API suite",
    "e2e: E2E scenario",
    "journal: journal functionality tests"
]

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4
exclude = ["__pypackages__", ".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-rerunfailures>=14.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
    "allure-pytest>=2.13",
    "requests>=2.31",
    "pre-commit>=3.5",
    "ruff>=0.4",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "faker>=24.0"
]
